--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 </div>
             </div>
 
-              <!-- Absenden Button -->
+            <!-- Absenden Button -->
             <div class="form-field">
                 <input type="submit" value="Absenden">
             </div>
@@ -323,72 +323,63 @@
         <div class="tooltip" id="tooltip"></div>
     </div>
 
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function () {
-            emailjs.init("qsmH-iM0gbpRg_ncO"); // User ID
-        })();
-
+    <script>
         document.getElementById('surveyForm').addEventListener('submit', function (event) {
             event.preventDefault();
+
+            const formData = new FormData(event.target);
+            let data = {};
+
+            // Daten aus dem Formular sammeln und in JSON-Format umwandeln
+            formData.forEach((value, key) => {
+                if (data[key]) {
+                    // Falls eine Checkbox mehrfach ausgefüllt ist
+                    if (Array.isArray(data[key])) {
+                        data[key].push(value);
+                    } else {
+                        data[key] = [data[key], value];
+                    }
+                } else {
+                    data[key] = value;
+                }
+            });
+
+            const record = {
+                fields: {
+                    Responses: JSON.stringify(data) // JSON Objekt als String speichern
+                }
+            };
 
             // Airtable API Setup
             const apiUrl = 'https://api.airtable.com/v0/appfvYCuahubaO54i/Umfrage';
             const apiKey = 'patxcHE5Uk28ox3xf.faae1584b3941a6a121dae59f41c6daf4868dedee4bbe704bd2f82efc05d6dc4';
 
-            // Formulardaten sammeln
-            const formData = new FormData(this);
-            const data = {
-                fields: {
-                    "Alter": formData.get("age"),
-                    "Geschlecht": formData.get("gender"),
-                    "Religion": formData.get("religion"),
-                    // Füge hier die restlichen Fragen hinzu.
-                }
-            };
-
-            // Sende die Formulardaten an Airtable
             fetch(apiUrl, {
                 method: 'POST',
                 headers: {
                     'Authorization': `Bearer ${apiKey}`,
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify(data)
+                body: JSON.stringify(record)
             })
-            .then(response => {
-                if (response.ok) {
-                    return response.json();
-                } else {
-                    throw new Error('Fehler beim Senden an Airtable');
-                }
-            })
+            .then(response => response.json())
             .then(data => {
-                console.log('Erfolge:', data);
-                alert('Deine Umfrage wurde erfolgreich abgeschickt!');
+                alert('Die Umfrage wurde erfolgreich abgeschickt.');
+                document.getElementById('surveyForm').reset();
             })
-            .catch((error) => {
-                console.error('Fehler:', error);
-                alert('Es gab einen Fehler beim Abschicken der Umfrage: ' + error.message);
+            .catch(error => {
+                console.error('Fehler beim Senden der Daten:', error);
+                alert('Es gab ein Problem beim Absenden der Umfrage.');
             });
         });
 
-        // Funktion zum Sperren einer Frage
-        function lockThis(element) {
-            const questionName = element.name;
-            const options = document.getElementsByName(questionName);
-            for (let option of options) {
-                option.disabled = true; // Alle Optionen der Frage deaktivieren
-            }
-        }
-
-        // Tooltip-Funktionen
+        // Tooltip Funktionen für Definitionen
         function showTooltip(event, text) {
             const tooltip = document.getElementById('tooltip');
             tooltip.style.display = 'block';
-            tooltip.textContent = text;
-            tooltip.style.left = event.pageX + 5 + 'px';
-            tooltip.style.top = event.pageY + 5 + 'px';
+            tooltip.style.left = `${event.pageX + 10}px`;
+            tooltip.style.top = `${event.pageY + 10}px`;
+            tooltip.innerText = text;
         }
 
         function hideTooltip() {
