--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
             };
 
             // Airtable API Setup
-            const apiUrl = 'https://api.airtable.com/v0/YOUR_BASE_ID/YOUR_TABLE_NAME'; // Ersetze mit deiner Base ID und Tabellenname
-            const apiKey = 'YOUR_API_KEY'; // Ersetze mit deinem API Key
+            const apiUrl = 'https://api.airtable.com/v0/appfvYCuahubaO54i/Umfrage'; // Ersetze mit deiner Base ID und Tabellenname
+            const apiKey = 'patxcHE5Uk28ox3xf.faae1584b3941a6a121dae59f41c6daf4868dedee4bbe704bd2f82efc05d6dc4'; // Ersetze mit deinem API Key
 
             fetch(apiUrl, {
                 method: 'POST',
