--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
                 </div>
             </div>
 
+              <!-- Frage 4a -->
+            <div class="form-field" id="euthanasiaSupport" style="display:none;">
+                <label>4a. Wenn ja, bist du dafür?</label><br>
+                <div>
+                    <label><input type="radio" name="supportEuthanasia" value="Ja" onchange="lockThis(this)">Ja</label><br>
+                    <label><input type="radio" name="supportEuthanasia" value="Nein" onchange="lockThis(this)">Nein</label><br>
+                    <label><input type="radio" name="supportEuthanasia" value="Unsicher" onchange="lockThis(this)">Unsicher</label>
+                </div>
+            </div>
+            
             <!-- Frage 5 -->
             <div class="form-field">
                 <label>5. Hast du schon Erfahrungen mit Sterbehilfe?</label><br>
